Change logo image format from SVG to PNG

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container header-container">
       <div class="logo">
         <a href="index.html">
-          <img src="assets/img/brand/logo.svg" alt="Autos Prime Logo">
+          <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
         </a>
       </div>
 
