--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,22 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Autos Prime | Quality Used Cars</title>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/img/brand/favicon.png">
-
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/components.css" />
   <link rel="stylesheet" href="assets/css/animations.css" />
 </head>
-<body>
 
+<body>
   <!-- Header -->
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
         <a href="index.html">
-          <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+          <img src="assets/img/brand/logo.png" alt="Autos Prime Logo" />
         </a>
       </div>
 
@@ -51,11 +48,12 @@
 
         <div class="hero-buttons">
           <a href="inventory.html" class="btn btn-primary">Browse Inventory</a>
-          <a href="contact.html" class="btn btn-secondary">Contact via WhatsApp</a>
+          <a href="#" class="btn btn-secondary">Contact via WhatsApp</a>
         </div>
       </div>
 
       <div class="hero-image">
+        <!-- Imagen va aquí después -->
         <div class="image-placeholder">Hero Image</div>
       </div>
     </div>
@@ -64,17 +62,14 @@
   <!-- Featured Vehicles -->
   <section class="featured-vehicles">
     <div class="container">
-
       <h2 class="section-title animate fade-up">
         Featured Vehicles
       </h2>
 
       <div class="vehicles-grid">
-
+        <!-- Vehicle Card 1 -->
         <article class="card animate fade-up delay-1">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+          <div class="card-image-placeholder">Vehicle Image</div>
           <div class="card-body">
             <h3 class="card-title">Toyota Corolla 2019</h3>
             <p class="card-price">$15,500</p>
@@ -84,10 +79,9 @@
           </div>
         </article>
 
+        <!-- Vehicle Card 2 -->
         <article class="card animate fade-up delay-2">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+          <div class="card-image-placeholder">Vehicle Image</div>
           <div class="card-body">
             <h3 class="card-title">Honda CR-V 2020</h3>
             <p class="card-price">$22,900</p>
@@ -97,10 +91,9 @@
           </div>
         </article>
 
+        <!-- Vehicle Card 3 -->
         <article class="card animate fade-up delay-3">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+          <div class="card-image-placeholder">Vehicle Image</div>
           <div class="card-body">
             <h3 class="card-title">Ford F-150 2018</h3>
             <p class="card-price">$26,500</p>
@@ -109,7 +102,6 @@
             </a>
           </div>
         </article>
-
       </div>
 
       <div class="featured-cta animate fade-up delay-4">
@@ -117,14 +109,12 @@
           View Full Inventory
         </a>
       </div>
-
     </div>
   </section>
 
   <!-- Why Choose Autos Prime -->
   <section class="why-choose">
     <div class="container">
-
       <h2 class="section-title animate fade-up">
         Why Choose Autos Prime
       </h2>
@@ -134,60 +124,59 @@
       </p>
 
       <div class="why-grid">
-
+        <!-- Reason 1 -->
         <div class="why-card animate fade-up delay-2">
           <div class="why-icon">
             <div class="icon-placeholder"></div>
           </div>
           <h3>Trusted Vehicles</h3>
           <p>
-            Every vehicle is carefully inspected to ensure quality,
-            reliability, and peace of mind.
+            Every vehicle is carefully inspected to ensure quality, reliability,
+            and peace of mind.
           </p>
         </div>
 
+        <!-- Reason 2 -->
         <div class="why-card animate fade-up delay-3">
           <div class="why-icon">
             <div class="icon-placeholder"></div>
           </div>
           <h3>Transparent Pricing</h3>
           <p>
-            No hidden fees. What you see is what you pay —
-            honest pricing from start to finish.
+            No hidden fees. What you see is what you pay — honest pricing from
+            start to finish.
           </p>
         </div>
 
+        <!-- Reason 3 -->
         <div class="why-card animate fade-up delay-4">
           <div class="why-icon">
             <div class="icon-placeholder"></div>
           </div>
           <h3>Easy Scheduling</h3>
           <p>
-            Book a visit in minutes and see the car in person,
-            on your schedule.
+            Book a visit in minutes and see the car in person, on your schedule.
           </p>
         </div>
 
+        <!-- Reason 4 -->
         <div class="why-card animate fade-up delay-5">
           <div class="why-icon">
             <div class="icon-placeholder"></div>
           </div>
           <h3>Personal Support</h3>
           <p>
-            We guide you through every step to make your buying
-            experience smooth and stress-free.
+            We guide you through every step to make your buying experience smooth
+            and stress-free.
           </p>
         </div>
-
       </div>
-
     </div>
   </section>
 
   <!-- Trust & Social Proof -->
   <section class="trust">
     <div class="container">
-
       <h2 class="section-title animate fade-up">
         Trusted by Drivers Across the Area
       </h2>
@@ -197,11 +186,11 @@
       </p>
 
       <div class="trust-grid">
-
+        <!-- Review 1 -->
         <div class="review-card animate fade-up delay-2">
           <p class="review-text">
-            “The process was simple and transparent. The car was exactly
-            as described and in excellent condition.”
+            “The process was simple and transparent. The car was exactly as
+            described and in excellent condition.”
           </p>
           <div class="review-author">
             <strong>Michael R.</strong>
@@ -209,10 +198,11 @@
           </div>
         </div>
 
+        <!-- Review 2 -->
         <div class="review-card animate fade-up delay-3">
           <p class="review-text">
-            “Great customer service and no pressure at all.
-            I scheduled a visit and drove home happy.”
+            “Great customer service and no pressure at all. I scheduled a visit
+            and drove home happy.”
           </p>
           <div class="review-author">
             <strong>Sarah L.</strong>
@@ -220,49 +210,50 @@
           </div>
         </div>
 
+        <!-- Review 3 -->
         <div class="review-card animate fade-up delay-4">
           <p class="review-text">
-            “Fair prices, honest communication, and clean vehicles.
-            I would definitely recommend Autos Prime.”
+            “Fair prices, honest communication, and clean vehicles. I would
+            definitely recommend Autos Prime.”
           </p>
           <div class="review-author">
             <strong>Daniel K.</strong>
             <span>Verified Buyer</span>
           </div>
         </div>
-
       </div>
 
+      <!-- Trust Badges -->
       <div class="trust-badges animate fade-up delay-5">
         <div class="badge-placeholder">Quality Inspected</div>
         <div class="badge-placeholder">Transparent Pricing</div>
         <div class="badge-placeholder">Secure Scheduling</div>
       </div>
 
+      <!-- Final CTA -->
       <div class="trust-cta animate fade-up delay-6">
         <a href="inventory.html" class="btn btn-primary">
           Browse Available Cars
         </a>
-        <a href="contact.html" class="btn btn-secondary">
+        <a href="#" class="btn btn-secondary">
           Contact via WhatsApp
         </a>
       </div>
-
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-container">
-
+      <!-- Brand -->
       <div class="footer-brand">
         <h3>Autos<span>Prime</span></h3>
         <p>
-          Quality used vehicles with transparent pricing and
-          easy scheduling.
+          Quality used vehicles with transparent pricing and easy scheduling.
         </p>
       </div>
 
+      <!-- Footer Navigation -->
       <div class="footer-nav">
         <h4>Quick Links</h4>
         <ul>
@@ -272,32 +263,28 @@
         </ul>
       </div>
 
+      <!-- Contact Info -->
       <div class="footer-contact">
         <h4>Contact</h4>
         <ul>
           <li>Email: info@autosprime.com</li>
           <li>Phone: (555) 123-4567</li>
           <li>
-            <a href="contact.html" class="footer-whatsapp">
-              WhatsApp Chat
-            </a>
+            <a href="#" class="footer-whatsapp">WhatsApp Chat</a>
           </li>
         </ul>
       </div>
-
     </div>
 
+    <!-- Bottom Bar -->
     <div class="footer-bottom">
-      <p>
-        © 2026 Autos Prime. All rights reserved.
-      </p>
+      <p>© 2026 Autos Prime. All rights reserved.</p>
     </div>
   </footer>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/animations.js"></script>
-
 </body>
 </html>
 ```
