--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,7 +68,9 @@
       <div class="vehicles-grid">
         <!-- Vehicle Card 1 -->
         <article class="card animate fade-up delay-1">
-          <div class="card-image-placeholder">Vehicle Image</div>
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
           <div class="card-body">
             <h3 class="card-title">Toyota Corolla 2019</h3>
             <p class="card-price">$15,500</p>
@@ -81,7 +82,9 @@
 
         <!-- Vehicle Card 2 -->
         <article class="card animate fade-up delay-2">
-          <div class="card-image-placeholder">Vehicle Image</div>
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
           <div class="card-body">
             <h3 class="card-title">Honda CR-V 2020</h3>
             <p class="card-price">$22,900</p>
@@ -93,7 +96,9 @@
 
         <!-- Vehicle Card 3 -->
         <article class="card animate fade-up delay-3">
-          <div class="card-image-placeholder">Vehicle Image</div>
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
           <div class="card-body">
             <h3 class="card-title">Ford F-150 2018</h3>
             <p class="card-price">$26,500</p>
@@ -287,4 +292,3 @@
   <script src="assets/js/animations.js"></script>
 </body>
 </html>
-```
