--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -10,15 +10,16 @@
   <link rel="stylesheet" href="assets/css/components.css" />
   <link rel="stylesheet" href="assets/css/animations.css" />
 </head>
-
 <body>
+
   <!-- Header -->
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
-        <a href="index.html">
-          <img src="assets/img/brand/logo.png" alt="Autos Prime Logo" />
-        </a>
+       <a href="index.html">
+  <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+</a>
+
       </div>
 
       <nav class="main-nav">
@@ -57,15 +58,16 @@
       </div>
     </div>
   </section>
-
   <!-- Featured Vehicles -->
   <section class="featured-vehicles">
     <div class="container">
+
       <h2 class="section-title animate fade-up">
         Featured Vehicles
       </h2>
 
       <div class="vehicles-grid">
+
         <!-- Vehicle Card 1 -->
         <article class="card animate fade-up delay-1">
           <div class="card-image-placeholder">
@@ -107,6 +109,7 @@
             </a>
           </div>
         </article>
+
       </div>
 
       <div class="featured-cta animate fade-up delay-4">
@@ -114,181 +117,197 @@
           View Full Inventory
         </a>
       </div>
+
     </div>
   </section>
+<!-- Why Choose Autos Prime -->
+<section class="why-choose">
+  <div class="container">
 
-  <!-- Why Choose Autos Prime -->
-  <section class="why-choose">
-    <div class="container">
-      <h2 class="section-title animate fade-up">
-        Why Choose Autos Prime
-      </h2>
+    <h2 class="section-title animate fade-up">
+      Why Choose Autos Prime
+    </h2>
 
-      <p class="section-subtitle animate fade-up delay-1">
-        A better way to buy used cars — transparent, simple, and reliable.
-      </p>
+    <p class="section-subtitle animate fade-up delay-1">
+      A better way to buy used cars — transparent, simple, and reliable.
+    </p>
 
-      <div class="why-grid">
-        <!-- Reason 1 -->
-        <div class="why-card animate fade-up delay-2">
-          <div class="why-icon">
-            <div class="icon-placeholder"></div>
-          </div>
-          <h3>Trusted Vehicles</h3>
-          <p>
-            Every vehicle is carefully inspected to ensure quality, reliability,
-            and peace of mind.
-          </p>
+    <div class="why-grid">
+
+      <!-- Reason 1 -->
+      <div class="why-card animate fade-up delay-2">
+        <div class="why-icon">
+          <!-- Icon placeholder -->
+          <div class="icon-placeholder"></div>
         </div>
-
-        <!-- Reason 2 -->
-        <div class="why-card animate fade-up delay-3">
-          <div class="why-icon">
-            <div class="icon-placeholder"></div>
-          </div>
-          <h3>Transparent Pricing</h3>
-          <p>
-            No hidden fees. What you see is what you pay — honest pricing from
-            start to finish.
-          </p>
-        </div>
-
-        <!-- Reason 3 -->
-        <div class="why-card animate fade-up delay-4">
-          <div class="why-icon">
-            <div class="icon-placeholder"></div>
-          </div>
-          <h3>Easy Scheduling</h3>
-          <p>
-            Book a visit in minutes and see the car in person, on your schedule.
-          </p>
-        </div>
-
-        <!-- Reason 4 -->
-        <div class="why-card animate fade-up delay-5">
-          <div class="why-icon">
-            <div class="icon-placeholder"></div>
-          </div>
-          <h3>Personal Support</h3>
-          <p>
-            We guide you through every step to make your buying experience smooth
-            and stress-free.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Trust & Social Proof -->
-  <section class="trust">
-    <div class="container">
-      <h2 class="section-title animate fade-up">
-        Trusted by Drivers Across the Area
-      </h2>
-
-      <p class="section-subtitle animate fade-up delay-1">
-        Our customers value honesty, quality, and a smooth buying experience.
-      </p>
-
-      <div class="trust-grid">
-        <!-- Review 1 -->
-        <div class="review-card animate fade-up delay-2">
-          <p class="review-text">
-            “The process was simple and transparent. The car was exactly as
-            described and in excellent condition.”
-          </p>
-          <div class="review-author">
-            <strong>Michael R.</strong>
-            <span>Verified Buyer</span>
-          </div>
-        </div>
-
-        <!-- Review 2 -->
-        <div class="review-card animate fade-up delay-3">
-          <p class="review-text">
-            “Great customer service and no pressure at all. I scheduled a visit
-            and drove home happy.”
-          </p>
-          <div class="review-author">
-            <strong>Sarah L.</strong>
-            <span>Verified Buyer</span>
-          </div>
-        </div>
-
-        <!-- Review 3 -->
-        <div class="review-card animate fade-up delay-4">
-          <p class="review-text">
-            “Fair prices, honest communication, and clean vehicles. I would
-            definitely recommend Autos Prime.”
-          </p>
-          <div class="review-author">
-            <strong>Daniel K.</strong>
-            <span>Verified Buyer</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Trust Badges -->
-      <div class="trust-badges animate fade-up delay-5">
-        <div class="badge-placeholder">Quality Inspected</div>
-        <div class="badge-placeholder">Transparent Pricing</div>
-        <div class="badge-placeholder">Secure Scheduling</div>
-      </div>
-
-      <!-- Final CTA -->
-      <div class="trust-cta animate fade-up delay-6">
-        <a href="inventory.html" class="btn btn-primary">
-          Browse Available Cars
-        </a>
-        <a href="#" class="btn btn-secondary">
-          Contact via WhatsApp
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container footer-container">
-      <!-- Brand -->
-      <div class="footer-brand">
-        <h3>Autos<span>Prime</span></h3>
+        <h3>Trusted Vehicles</h3>
         <p>
-          Quality used vehicles with transparent pricing and easy scheduling.
+          Every vehicle is carefully inspected to ensure quality,
+          reliability, and peace of mind.
         </p>
       </div>
 
-      <!-- Footer Navigation -->
-      <div class="footer-nav">
-        <h4>Quick Links</h4>
-        <ul>
-          <li><a href="inventory.html">Inventory</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <!-- Reason 2 -->
+      <div class="why-card animate fade-up delay-3">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Transparent Pricing</h3>
+        <p>
+          No hidden fees. What you see is what you pay —
+          honest pricing from start to finish.
+        </p>
       </div>
 
-      <!-- Contact Info -->
-      <div class="footer-contact">
-        <h4>Contact</h4>
-        <ul>
-          <li>Email: info@autosprime.com</li>
-          <li>Phone: (555) 123-4567</li>
-          <li>
-            <a href="#" class="footer-whatsapp">WhatsApp Chat</a>
-          </li>
-        </ul>
+      <!-- Reason 3 -->
+      <div class="why-card animate fade-up delay-4">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Easy Scheduling</h3>
+        <p>
+          Book a visit in minutes and see the car in person,
+          on your schedule.
+        </p>
       </div>
+
+      <!-- Reason 4 -->
+      <div class="why-card animate fade-up delay-5">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Personal Support</h3>
+        <p>
+          We guide you through every step to make your buying
+          experience smooth and stress-free.
+        </p>
+      </div>
+
     </div>
 
-    <!-- Bottom Bar -->
-    <div class="footer-bottom">
-      <p>© 2026 Autos Prime. All rights reserved.</p>
+  </div>
+</section>
+<!-- Trust & Social Proof -->
+<section class="trust">
+  <div class="container">
+
+    <h2 class="section-title animate fade-up">
+      Trusted by Drivers Across the Area
+    </h2>
+
+    <p class="section-subtitle animate fade-up delay-1">
+      Our customers value honesty, quality, and a smooth buying experience.
+    </p>
+
+    <div class="trust-grid">
+
+      <!-- Review 1 -->
+      <div class="review-card animate fade-up delay-2">
+        <p class="review-text">
+          “The process was simple and transparent. The car was exactly
+          as described and in excellent condition.”
+        </p>
+        <div class="review-author">
+          <strong>Michael R.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
+      <!-- Review 2 -->
+      <div class="review-card animate fade-up delay-3">
+        <p class="review-text">
+          “Great customer service and no pressure at all.
+          I scheduled a visit and drove home happy.”
+        </p>
+        <div class="review-author">
+          <strong>Sarah L.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
+      <!-- Review 3 -->
+      <div class="review-card animate fade-up delay-4">
+        <p class="review-text">
+          “Fair prices, honest communication, and clean vehicles.
+          I would definitely recommend Autos Prime.”
+        </p>
+        <div class="review-author">
+          <strong>Daniel K.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
     </div>
-  </footer>
+
+    <!-- Trust Badges -->
+    <div class="trust-badges animate fade-up delay-5">
+      <div class="badge-placeholder">Quality Inspected</div>
+      <div class="badge-placeholder">Transparent Pricing</div>
+      <div class="badge-placeholder">Secure Scheduling</div>
+    </div>
+
+    <!-- Final CTA -->
+    <div class="trust-cta animate fade-up delay-6">
+      <a href="inventory.html" class="btn btn-primary">
+        Browse Available Cars
+      </a>
+      <a href="#" class="btn btn-secondary">
+        Contact via WhatsApp
+      </a>
+    </div>
+
+  </div>
+</section>
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="container footer-container">
+
+    <!-- Brand -->
+    <div class="footer-brand">
+      <h3>Autos<span>Prime</span></h3>
+      <p>
+        Quality used vehicles with transparent pricing and
+        easy scheduling.
+      </p>
+    </div>
+
+    <!-- Footer Navigation -->
+    <div class="footer-nav">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="inventory.html">Inventory</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-contact">
+      <h4>Contact</h4>
+      <ul>
+        <li>Email: info@autosprime.com</li>
+        <li>Phone: (555) 123-4567</li>
+        <li>
+          <a href="#" class="footer-whatsapp">
+            WhatsApp Chat
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="footer-bottom">
+    <p>
+      © 2026 Autos Prime. All rights reserved.
+    </p>
+  </div>
+</footer>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/animations.js"></script>
+
 </body>
 </html>
