Replace vehicle image placeholders with actual images

--- a/inventory.html
+++ b/inventory.html
@@ -84,58 +84,51 @@
     <div class="container vehicles-grid">
 
       <!-- Vehicle Card -->
-      <article class="card animate fade-up">
-        <div class="card-image-placeholder">Vehicle Image</div>
-        <div class="card-body">
-          <h3 class="card-title">Toyota Corolla 2019</h3>
-          <p class="card-price">$15,500</p>
-          <a href="vehicle.html" class="btn btn-secondary">
-            View Details
-          </a>
-        </div>
-      </article>
+    <article class="card animate fade-up">
+  <img src="assets/img/vehicles/toyota-corolla-2019.jpg" alt="Toyota Corolla 2019" loading="lazy">
+  <div class="card-body">
+    <h3 class="card-title">Toyota Corolla 2019</h3>
+    <p class="card-price">$15,500</p>
+    <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+  </div>
+</article>
 
-      <article class="card animate fade-up delay-1">
-        <div class="card-image-placeholder">Vehicle Image</div>
-        <div class="card-body">
-          <h3 class="card-title">Honda CR-V 2020</h3>
-          <p class="card-price">$22,900</p>
-          <a href="vehicle.html" class="btn btn-secondary">
-            View Details
-          </a>
-        </div>
-      </article>
+<article class="card animate fade-up delay-1">
+  <img src="assets/img/vehicles/honda-crv-2020.jpg" alt="Honda CR-V 2020" loading="lazy">
+  <div class="card-body">
+    <h3 class="card-title">Honda CR-V 2020</h3>
+    <p class="card-price">$22,900</p>
+    <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+  </div>
+</article>
 
-      <article class="card animate fade-up delay-2">
-        <div class="card-image-placeholder">Vehicle Image</div>
-        <div class="card-body">
-          <h3 class="card-title">Ford F-150 2018</h3>
-          <p class="card-price">$26,500</p>
-          <a href="vehicle.html" class="btn btn-secondary">
-            View Details
-          </a>
-        </div>
-      </article>
+<article class="card animate fade-up delay-2">
+  <img src="assets/img/vehicles/ford-f150-2018.jpg" alt="Ford F-150 2018" loading="lazy">
+  <div class="card-body">
+    <h3 class="card-title">Ford F-150 2018</h3>
+    <p class="card-price">$26,500</p>
+    <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+  </div>
+</article>
 
-      <article class="card animate fade-up delay-3">
-        <div class="card-image-placeholder">Vehicle Image</div>
-        <div class="card-body">
-          <h3 class="card-title">Nissan Rogue 2021</h3>
-          <p class="card-price">$24,000</p>
-          <a href="vehicle.html" class="btn btn-secondary">
-            View Details
-          </a>
-        </div>
-      </article>
+<article class="card animate fade-up delay-3">
+  <img src="assets/img/vehicles/nissan-rogue-2021.jpg" alt="Nissan Rogue 2021" loading="lazy">
+  <div class="card-body">
+    <h3 class="card-title">Nissan Rogue 2021</h3>
+    <p class="card-price">$24,000</p>
+    <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+  </div>
+</article>
 
-      <article class="card animate fade-up delay-4">
-        <div class="card-image-placeholder">Vehicle Image</div>
-        <div class="card-body">
-          <h3 class="card-title">BMW 3 Series 2018</h3>
-          <p class="card-price">$27,900</p>
-          <a href="vehicle.html" class="btn btn-secondary">
-            View Details
-          </a>
+<article class="card animate fade-up delay-4">
+  <img src="assets/img/vehicles/bmw-3series-2018.jpg" alt="BMW 3 Series 2018" loading="lazy">
+  <div class="card-body">
+    <h3 class="card-title">BMW 3 Series 2018</h3>
+    <p class="card-price">$27,900</p>
+    <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+  </div>
+</article>
+
         </div>
       </article>
 
