--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 
         <!-- Vehicle Card 1 -->
         <article class="card animate fade-up delay-1">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+         <img src="assets/img/vehicles/toyota-corolla-2019.jpg"
+     alt="Toyota Corolla 2019"
+     loading="lazy">
+
           <div class="card-body">
             <h3 class="card-title">Toyota Corolla 2019</h3>
             <p class="card-price">$15,500</p>
@@ -84,9 +85,10 @@
 
         <!-- Vehicle Card 2 -->
         <article class="card animate fade-up delay-2">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+         <img src="assets/img/vehicles/honda-crv-2020.jpg"
+     alt="Honda CR-V 2020"
+     loading="lazy">
+
           <div class="card-body">
             <h3 class="card-title">Honda CR-V 2020</h3>
             <p class="card-price">$22,900</p>
@@ -98,9 +100,10 @@
 
         <!-- Vehicle Card 3 -->
         <article class="card animate fade-up delay-3">
-          <div class="card-image-placeholder">
-            Vehicle Image
-          </div>
+         <img src="assets/img/vehicles/ford-f150-2018.jpg"
+     alt="Ford F-150 2018"
+     loading="lazy">
+
           <div class="card-body">
             <h3 class="card-title">Ford F-150 2018</h3>
             <p class="card-price">$26,500</p>
