--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-container">
-      <div class="logo">
-       <a href="index.html">
-  <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
-</a>
+     <div class="logo">
+  <a href="index.html" class="logo-link">
+    <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+    <span class="logo-text">
+      <span class="logo-autos">Autos</span><span class="logo-prime">Prime</span>
+    </span>
+  </a>
+</div>
 
-      </div>
 
       <nav class="main-nav">
         <ul>
