--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,14 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-container">
-      <div class="logo">
-        <a href="index.html">Autos<span>Prime</span></a>
-      </div>
+     <div class="logo">
+  <a href="index.html" class="logo-link">
+    <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+    <span class="logo-text">
+      <span class="logo-autos">Autos</span><span class="logo-prime">Prime</span>
+    </span>
+  </a>
+</div>
 
       <nav class="main-nav">
         <ul>
