--- a/index.html
+++ b/index.html
@@ -40,22 +40,20 @@
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container hero-container">
-      <div class="hero-content">
-        <h1>Quality Used Cars You Can Trust</h1>
-        <p>
-          Hand-picked vehicles with transparent pricing and easy scheduling.
-        </p>
+ <section class="hero">
+  <div class="hero-overlay"></div>
 
-        <div class="hero-buttons">
-          <a href="inventory.html" class="btn btn-primary">Browse Inventory</a>
-          <a href="#" class="btn btn-secondary">Contact via WhatsApp</a>
-        </div>
-      </div>
+  <div class="hero-content animate fade-up">
+    <h1>Autos usados<br><span>de alto nivel</span></h1>
+    <p>Calidad verificada, precios justos y atención profesional.</p>
 
-      <div class="hero-image">
+    <div class="hero-buttons">
+      <a href="inventory.html" class="btn btn-primary">Ver inventario</a>
+      <a href="contact.html" class="btn btn-secondary">Contáctanos</a>
+    </div>
+  </div>
+</section>
+
         <!-- Imagen va aquí después -->
         <div class="image-placeholder">Hero Image</div>
       </div>
