--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
   <div class="hero-overlay"></div>
 
   <div class="hero-content animate fade-up">
-    <h1>Autos usados<br><span>de alto nivel</span></h1>
-    <p>Calidad verificada, precios justos y atención profesional.</p>
+    <h1>Premium Used Cars<br><span>You Can Trust</span></h1>
+<p>Quality inspected vehicles, fair pricing, and professional service.</p>
 
-    <div class="hero-buttons">
-      <a href="inventory.html" class="btn btn-primary">Ver inventario</a>
-      <a href="contact.html" class="btn btn-secondary">Contáctanos</a>
-    </div>
+<div class="hero-buttons">
+  <a href="inventory.html" class="btn btn-primary">View Inventory</a>
+  <a href="contact.html" class="btn btn-secondary">Contact Us</a>
+</div>
+
   </div>
 </section>
 
