--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
   </section>
 <!-- Why Choose Autos Prime -->
-<section class="why-choose">
+<section class="section why-choose">
   <div class="container">
 
     <h2 class="section-title animate fade-up">
