--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
       A better way to buy used cars — transparent, simple, and reliable.
     </p>
 
-    <div class="why-grid">
+    <div class="grid-3">
+
 
       <!-- Reason 1 -->
       <div class="why-card animate fade-up delay-2">
