--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
       <!-- Reason 1 -->
-      <div class="why-card animate fade-up delay-2">
+      <div class="info-card animate fade-up delay-2">
         <div class="why-icon">
           <!-- Icon placeholder -->
           <div class="icon-placeholder"></div>
@@ -150,7 +150,7 @@
       </div>
 
       <!-- Reason 2 -->
-      <div class="why-card animate fade-up delay-3">
+      <div class="info-card animate fade-up delay-3">
         <div class="why-icon">
           <div class="icon-placeholder"></div>
         </div>
@@ -162,7 +162,7 @@
       </div>
 
       <!-- Reason 3 -->
-      <div class="why-card animate fade-up delay-4">
+      <div class="info-card animate fade-up delay-4">
         <div class="why-icon">
           <div class="icon-placeholder"></div>
         </div>
@@ -174,7 +174,7 @@
       </div>
 
       <!-- Reason 4 -->
-      <div class="why-card animate fade-up delay-5">
+      <div class="info-card animate fade-up delay-5">
         <div class="why-icon">
           <div class="icon-placeholder"></div>
         </div>
