--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </div>
 </section>
 <!-- Trust & Social Proof -->
-<section class="trust">
+<section class="section trust">
   <div class="container">
 
     <h2 class="section-title animate fade-up">
@@ -201,10 +201,10 @@
       Our customers value honesty, quality, and a smooth buying experience.
     </p>
 
-    <div class="trust-grid">
+    <div class="grid-3">
 
       <!-- Review 1 -->
-      <div class="review-card animate fade-up delay-2">
+      <div class="info-card animate fade-up delay-2">
         <p class="review-text">
           “The process was simple and transparent. The car was exactly
           as described and in excellent condition.”
@@ -216,7 +216,7 @@
       </div>
 
       <!-- Review 2 -->
-      <div class="review-card animate fade-up delay-3">
+      <div class="info-card animate fade-up delay-3">
         <p class="review-text">
           “Great customer service and no pressure at all.
           I scheduled a visit and drove home happy.”
@@ -228,7 +228,7 @@
       </div>
 
       <!-- Review 3 -->
-      <div class="review-card animate fade-up delay-4">
+      <div class="info-card animate fade-up delay-4">
         <p class="review-text">
           “Fair prices, honest communication, and clean vehicles.
           I would definitely recommend Autos Prime.”
