--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,21 @@
   <link rel="stylesheet" href="assets/css/components.css" />
   <link rel="stylesheet" href="assets/css/animations.css" />
 </head>
+
 <body>
 
-  <!-- Header -->
+  <!-- ================= HEADER ================= -->
   <header class="site-header">
     <div class="container header-container">
-     <div class="logo">
-  <a href="index.html" class="logo-link">
-    <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
-    <span class="logo-text">
-      <span class="logo-autos">Autos</span><span class="logo-prime">Prime</span>
-    </span>
-  </a>
-</div>
+
+      <div class="logo">
+        <a href="index.html" class="logo-link">
+          <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+          <span class="logo-text">
+            <span class="logo-autos">Autos</span><span class="logo-prime">Prime</span>
+          </span>
+        </a>
+      </div>
 
       <nav class="main-nav">
         <ul>
@@ -36,10 +38,11 @@
       <div class="header-cta">
         <a href="inventory.html" class="btn btn-primary">Browse Inventory</a>
       </div>
+
     </div>
   </header>
 
-  <!-- Contact Hero -->
+  <!-- ================= HERO ================= -->
   <section class="contact-hero">
     <div class="container animate fade-up">
       <h1>Contact Autos Prime</h1>
@@ -50,35 +53,34 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- ================= CONTACT ================= -->
   <section class="contact-section">
     <div class="container contact-grid">
 
-      <!-- Form -->
+      <!-- FORM -->
       <div class="contact-form animate fade-up">
-
         <h2>Send Us a Message</h2>
 
         <form action="#" method="post">
 
           <div class="form-group">
             <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" required />
+            <input type="text" id="name" name="name" placeholder="Your full name" required>
           </div>
 
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" required />
+            <input type="email" id="email" name="email" placeholder="you@email.com" required>
           </div>
 
           <div class="form-group">
             <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" name="phone" />
+            <input type="tel" id="phone" name="phone" placeholder="(000) 000-0000">
           </div>
 
           <div class="form-group">
             <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+            <textarea id="message" name="message" rows="5" placeholder="How can we help you?" required></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary">
@@ -88,23 +90,22 @@
         </form>
       </div>
 
-      <!-- Contact Info -->
+      <!-- INFO -->
       <div class="contact-info animate fade-up delay-1">
-
         <h2>Contact Information</h2>
 
         <p>
-          <strong>Location:</strong><br />
+          <strong>Location</strong><br>
           123 Main Street, Your City
         </p>
 
         <p>
-          <strong>Phone:</strong><br />
+          <strong>Phone</strong><br>
           (000) 000-0000
         </p>
 
         <p>
-          <strong>Email:</strong><br />
+          <strong>Email</strong><br>
           info@autosprime.com
         </p>
 
@@ -113,13 +114,12 @@
             Contact via WhatsApp
           </a>
         </div>
-
       </div>
 
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- ================= FOOTER ================= -->
   <footer class="site-footer">
     <div class="container footer-container">
 
